[package]
name = "internal-test"
version = "0.1.0"
authors = ["kushkies <kushkies@kushkies.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
#target = "stable-i686-pc-windows-msvc"

[lib]
crate-type = ["cdylib"]

[dependencies]
detour = "0.7.1"
imgui = "0.4.0"
winapi = { version = "0.3.9", features = ["minwindef", "windef", "winnt", "winuser", "consoleapi", "libloaderapi", "processthreadsapi", "d3d9", "d3d9types"] }